--- a/CrMoW.tex
+++ b/CrMoW.tex
@@ -77,41 +77,46 @@
 	\vfill
 }
 
+\section{Seaborgium}
 \frame{
 	\frametitle{}
+	\vfill
 	\begin{columns}
-		\begin{column}{.7\textwidth}
-			\vfill
-			\textbf{Seaborgium}
+		\begin{column}{.72\textwidth}
 			\begin{itemize}
-				\item Umělý prvek, transuran, protonové číslo 106, Sg.
-				\item Poprvé byl připraven v roce 1971:
-				\item \ce{^{208}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + 2 n}
-				\item \ce{^{207}_{82}Pb + ^{54}_{24}Cr -> ^{260}_{106}Sg + n}
-				\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi, který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/seaborg/facts/}{Glenn T. Seaborg}}
+				\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi,\footnote[frame]{\href{https://www.atomicheritage.org/profile/glenn-seaborg}{Glenn Seaborg}} který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/summary/}{Nobelova cena za chemii 1951}}
 				\item Název byl schválen roku 1997.\footnote[frame]{\href{https://doi.org/10.1351/pac199769122471}{Names and symbols of transfermium elements (IUPAC Recommendations 1997)}}
+				\item Známe 12 radioizotopů a dva jaderné izomery. Nejstabilnějším izotopem je \ce{^{269}Sg} s poločasem rozpadu 14~minut.
+				\item Tento izotop je součástí rozpadové řady flerovia.
+				\item Izotop \ce{^{265}Sg} (8,9~s) a izomer \ce{^{265m}Sg} (16,2~s) se využívají pro studium chemie seaborgia:
+				\item \ce{^{248}Cm + ^{22}Ne -> ^{265}Sg + 5 n}
 			\end{itemize}
-			\vfill
 		\end{column}
-		\begin{column}{.35\textwidth}
+		\begin{column}{.3\textwidth}
 			\begin{figure}
-				\adjincludegraphics[width=.6\textwidth]{img/Glenn_Seaborg.jpg}
-				\caption*{Glenn Seaborg.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Glenn_Seaborg_-_1964.jpg}{Atomic Energy Commission/Commons}}}
+				\adjincludegraphics[width=\textwidth]{img/Seaborg_in_lab_-_restoration.jpg}
+				\caption*{Glenn Seaborg.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Seaborg_in_lab_-_restoration.jpg}{Berkeley Laboratory/Commons}}}
 			\end{figure}
-
-			\begin{center}
-				\begin{tabular}{|l|l|}
-					\hline
-					$^{265}$Sg & 8,9 s \\\hline
-					$^{265m}$Sg & 16,2 s \\\hline
-					$^{265}$Sg & 8,9 s \\\hline
-					$^{265}$Sg & 8,9 s \\\hline
-					$^{265}$Sg & 8,9 s \\\hline
-					$^{265}$Sg & 8,9 s \\\hline
-				\end{tabular}
-			\end{center}
 		\end{column}
 	\end{columns}
+	\vfill
+}
+
+\frame{
+	\frametitle{}
+	\vfill
+	\begin{itemize}
+		\item Chemické vlastnosti seaborgia nejsou příliš prozkoumány.
+		\item Za vyšší teploty reaguje s kyslíkem a chlorovodíkem za vzniku oxychloridu:
+		\item \ce{Sg + O2 + 2 HCl -> SgO2Cl2 + H2}
+		\item Reakcí s kyslíkem poskytuje oxid:
+		\item \ce{2 Sg + 3 O2 -> 2 SgO3}
+		\item V přítomnosti vodní páry vzniká oxid-hydroxid:
+		\item \ce{SgO3 + H2O -> SgO2(OH)2}
+		\item V roce 2014 se povedlo připravit hexakarbonyl \ce{[Sg(CO)6]}.\footnote[frame]{\href{https://doi.org/10.1126/science.1255720}{Synthesis and detection of a seaborgium carbonyl complex}}
+		\item \ce{Sg + 6 CO -> [Sg(CO)6]}
+	\end{itemize}
+	\vfill
 }
 
 \section{Chemické a fyzikální vlastnosti}
@@ -162,48 +167,6 @@
 	\end{column}
 	\end{columns}
 
-	\vfill
-}
-
-\subsection{Seaborgium}
-\frame{
-	\frametitle{}
-	\vfill
-	\begin{columns}
-		\begin{column}{.72\textwidth}
-			\begin{itemize}
-				\item Bylo pojmenován po americkém chemikovi Glennu T. Seaborgovi,\footnote[frame]{\href{https://www.atomicheritage.org/profile/glenn-seaborg}{Glenn Seaborg}} který získal Nobelovu cenu za objev plutonia.\footnote[frame]{\href{https://www.nobelprize.org/prizes/chemistry/1951/summary/}{Nobelova cena za chemii 1951}}
-				\item Název byl schválen roku 1997.\footnote[frame]{\href{https://doi.org/10.1351/pac199769122471}{Names and symbols of transfermium elements (IUPAC Recommendations 1997)}}
-				\item Známe 12 radioizotopů a dva jaderné izomery. Nejstabilnějším izotopem je \ce{^{269}Sg} s poločasem rozpadu 14~minut.
-				\item Tento izotop je součástí rozpadové řady flerovia.
-				\item Izotop \ce{^{265}Sg} (8,9~s) a izomer \ce{^{265m}Sg} (16,2~s) se využívají pro studium chemie seaborgia:
-				\item \ce{^{248}Cm + ^{22}Ne -> ^{265}Sg + 5 n}
-			\end{itemize}
-		\end{column}
-		\begin{column}{.3\textwidth}
-			\begin{figure}
-				\adjincludegraphics[width=\textwidth]{img/Seaborg_in_lab_-_restoration.jpg}
-				\caption*{Glenn Seaborg.\footnote[frame]{Zdroj: \href{https://commons.wikimedia.org/wiki/File:Seaborg_in_lab_-_restoration.jpg}{Berkeley Laboratory/Commons}}}
-			\end{figure}
-		\end{column}
-	\end{columns}
-	\vfill
-}
-
-\frame{
-	\frametitle{}
-	\vfill
-	\begin{itemize}
-		\item Chemické vlastnosti seaborgia nejsou příliš prozkoumány.
-		\item Za vyšší teploty reaguje s kyslíkem a chlorovodíkem za vzniku oxychloridu:
-		\item \ce{Sg + O2 + 2 HCl -> SgO2Cl2 + H2}
-		\item Reakcí s kyslíkem poskytuje oxid:
-		\item \ce{2 Sg + 3 O2 -> 2 SgO3}
-		\item V přítomnosti vodní páry vzniká oxid-hydroxid:
-		\item \ce{SgO3 + H2O -> SgO2(OH)2}
-		\item V roce 2014 se povedlo připravit hexakarbonyl \ce{[Sg(CO)6]}.\footnote[frame]{\href{https://doi.org/10.1126/science.1255720}{Synthesis and detection of a seaborgium carbonyl complex}}
-		\item \ce{Sg + 6 CO -> [Sg(CO)6]}
-	\end{itemize}
 	\vfill
 }
 
